--- a/restaurant menu/.vscode/settings.json
+++ b/restaurant menu/.vscode/settings.json
@@ -56,5 +56,6 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "files.associations": {
     "iostream": "cpp"
-  }
+  },
+  "C_Cpp_Runner.useLinkTimeOptimization": false
 }
